--- a/ShapesAndTransformationsSolution/ConsoleApplication/ConsoleApplication.csproj
+++ b/ShapesAndTransformationsSolution/ConsoleApplication/ConsoleApplication.csproj
@@ -43,8 +43,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\Shapes\IShape.cs" />
+    <Compile Include="Interfaces\IInstanceFactory.cs" />
+    <Compile Include="Interfaces\IObjectConsolePrinter.cs" />
+    <Compile Include="Interfaces\IInstancesGetter.cs" />
+    <Compile Include="Interfaces\IObjectsConsolePrinter.cs" />
+    <Compile Include="Interfaces\XElementObjectPopulator.cs" />
+    <Compile Include="Interfaces\ITransform.cs" />
+    <Compile Include="Models\TransformationFactory.cs" />
+    <Compile Include="Models\Parameters\Transformations\MoveParameters.cs" />
+    <Compile Include="Models\Parameters\Transformations\RotateParameters.cs" />
+    <Compile Include="Models\Parameters\Transformations\ScaleParameters.cs" />
+    <Compile Include="Models\Parameters\Shapes\RectangleParameters.cs" />
+    <Compile Include="Models\Parameters\Shapes\SquareParameters.cs" />
+    <Compile Include="Models\Parameters\Shapes\CircleParameters.cs" />
+    <Compile Include="Models\ObjectConsolePrinter.cs" />
+    <Compile Include="Models\Parameters\Shapes\ShapeParameters.cs" />
+    <Compile Include="Models\InstanceFactory.cs" />
+    <Compile Include="Models\ObjectsConsolePrinter.cs" />
+    <Compile Include="Models\InstancesGetter.cs" />
+    <Compile Include="Models\XElementObjectPopulator.cs" />
+    <Compile Include="Models\Parameters\Shapes\TriangleParameters.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\MacroTransformer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
