Moved form using XElement as a parameter to using xmlStrings

--- a/ShapesAndTransformationsSolution/ConsoleApplication/ConsoleApplication.csproj
+++ b/ShapesAndTransformationsSolution/ConsoleApplication/ConsoleApplication.csproj
@@ -45,24 +45,23 @@
   <ItemGroup>
     <Compile Include="Interfaces\Shapes\IShape.cs" />
     <Compile Include="Interfaces\IInstanceFactory.cs" />
-    <Compile Include="Interfaces\IObjectConsolePrinter.cs" />
+    <Compile Include="Interfaces\IInstanceConsolePrinter.cs" />
     <Compile Include="Interfaces\IInstancesGetter.cs" />
-    <Compile Include="Interfaces\IObjectsConsolePrinter.cs" />
-    <Compile Include="Interfaces\XElementObjectPopulator.cs" />
+    <Compile Include="Interfaces\IInstancesConsolePrinter.cs" />
+    <Compile Include="Interfaces\IObjectPopulator.cs" />
     <Compile Include="Interfaces\ITransform.cs" />
-    <Compile Include="Models\TransformationFactory.cs" />
     <Compile Include="Models\Parameters\Transformations\MoveParameters.cs" />
     <Compile Include="Models\Parameters\Transformations\RotateParameters.cs" />
     <Compile Include="Models\Parameters\Transformations\ScaleParameters.cs" />
     <Compile Include="Models\Parameters\Shapes\RectangleParameters.cs" />
     <Compile Include="Models\Parameters\Shapes\SquareParameters.cs" />
     <Compile Include="Models\Parameters\Shapes\CircleParameters.cs" />
-    <Compile Include="Models\ObjectConsolePrinter.cs" />
+    <Compile Include="Models\InstanceConsolePrinter.cs" />
     <Compile Include="Models\Parameters\Shapes\ShapeParameters.cs" />
     <Compile Include="Models\XmlInstanceFactory.cs" />
-    <Compile Include="Models\ObjectsConsolePrinter.cs" />
+    <Compile Include="Models\InstancesConsolePrinter.cs" />
     <Compile Include="Models\XmlInstancesGetter.cs" />
-    <Compile Include="Models\XmlObjectPopulator.cs" />
+    <Compile Include="Models\XmlInstancePopulator.cs" />
     <Compile Include="Models\Parameters\Shapes\TriangleParameters.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
