--- a/ShapesAndTransformationsSolution/Domain/Domain/Domain.csproj
+++ b/ShapesAndTransformationsSolution/Domain/Domain/Domain.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DD0263CE-D7BC-425D-AF31-5A0EF78582CF}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{060A02C3-27EF-4912-B3FC-CD62EADAD118}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleApplication</RootNamespace>
-    <AssemblyName>ConsoleApplication</AssemblyName>
+    <RootNamespace>Domain</RootNamespace>
+    <AssemblyName>Domain</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -43,31 +40,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Exceptions\ShapesAndTransformationsIsNullException.cs" />
+    <Compile Include="Interfaces\IShapeAttributes.cs" />
+    <Compile Include="Interfaces\IShapesAttributesGetter.cs" />
+    <Compile Include="Interfaces\IShapeTransformationAttributes.cs" />
+    <Compile Include="Interfaces\IShapeTransformationsAttributesGetter.cs" />
+    <Compile Include="Interfaces\IShapeVertex.cs" />
+    <Compile Include="Interfaces\IShapeVerticesGetter.cs" />
+    <Compile Include="Models\ShapesAttributesGetter.cs" />
+    <Compile Include="Models\ShapeTransformationsAttributesGetter.cs" />
+    <Compile Include="Models\ShapeVerticesGetter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShapesAndTransformationsConsoleRunner.cs" />
+    <Compile Include="Models\ShapesAndTransformations.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain\Domain.csproj">
-      <Project>{060a02c3-27ef-4912-b3fc-cd62eadad118}</Project>
-      <Name>Domain</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\UiContracts\Contracts.csproj">
+    <ProjectReference Include="..\..\UiContracts\Contracts.csproj">
       <Project>{d843d54b-e733-4d36-942d-fd702776aa2b}</Project>
       <Name>Contracts</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="App_Data\Shapes.xml" />
-    <Content Include="App_Data\Transformations.xml" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>XCOPY "$(ProjectDir)App_Data" "$(TargetDir)App_Data" /s /i /y</PostBuildEvent>
-  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
