--- a/ShapesAndTransformationsSolution/Domain/Domain/Domain.csproj
+++ b/ShapesAndTransformationsSolution/Domain/Domain/Domain.csproj
@@ -41,14 +41,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Exceptions\ShapesAndTransformationsIsNullException.cs" />
+    <Compile Include="Interfaces\IShapeTransformer.cs" />
+    <Compile Include="Interfaces\IShapeAttributesPrinter.cs" />
     <Compile Include="Interfaces\IShapeAttributes.cs" />
     <Compile Include="Interfaces\IShapesAttributesGetter.cs" />
     <Compile Include="Interfaces\IShapeTransformationAttributes.cs" />
     <Compile Include="Interfaces\IShapeTransformationsAttributesGetter.cs" />
     <Compile Include="Interfaces\IShapeVertex.cs" />
     <Compile Include="Interfaces\IShapeVerticesGetter.cs" />
+    <Compile Include="Models\ShapeAttributesPrinter.cs" />
     <Compile Include="Models\ShapesAttributesGetter.cs" />
     <Compile Include="Models\ShapeTransformationsAttributesGetter.cs" />
+    <Compile Include="Models\ShapeTransformer.cs" />
     <Compile Include="Models\ShapeVerticesGetter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\ShapesAndTransformations.cs" />
