--- a/ShapesAndTransformationsSolution/ConsoleApplication/App.config
+++ b/ShapesAndTransformationsSolution/ConsoleApplication/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <appSettings>
+    <add key="DatastoreFolderPath" value="/App_Data" />
+    <add key="ShapesFileName" value="Shapes.xml"/>
+    <add key="TransformationsFileName" value="Transformations.xml"/>
+  </appSettings>
 </configuration>
