--- a/ShapesAndTransformationsSolution/ShapesAndTransformations.Tests/ShapesAndTransformations.Tests.csproj
+++ b/ShapesAndTransformationsSolution/ShapesAndTransformations.Tests/ShapesAndTransformations.Tests.csproj
@@ -65,8 +65,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="FileContentsGetterTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShapesAndTransformationsTests.cs" />
+    <Compile Include="ShapesAttributesGetterTester.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
