Tacticle commit with a code rush

--- a/ShapesAndTransformationsSolution/Domain/Domain/Domain.csproj
+++ b/ShapesAndTransformationsSolution/Domain/Domain/Domain.csproj
@@ -43,22 +43,24 @@
     <Compile Include="Exceptions\ShapesAndTransformationsIsNullException.cs" />
     <Compile Include="Interfaces\IFileContentsGetter.cs" />
     <Compile Include="Interfaces\IShapeCommand.cs" />
-    <Compile Include="Interfaces\IShapeCommandsGetter.cs" />
-    <Compile Include="Interfaces\IShapeTransformer.cs" />
+    <Compile Include="Interfaces\IShapeCommandGetter.cs" />
+    <Compile Include="Interfaces\IShapeTransformGetter.cs" />
     <Compile Include="Interfaces\INameWithNamedAttributesPrinter.cs" />
     <Compile Include="Interfaces\INameWithNamedAttributes.cs" />
     <Compile Include="Interfaces\INameWithNamedAttributesGetter.cs" />
     <Compile Include="Interfaces\IShapeVertex.cs" />
     <Compile Include="Interfaces\IShapeVerticesGetter.cs" />
+    <Compile Include="Interfaces\IVerticiesToNameWithNamedAttributesConverter.cs" />
     <Compile Include="Interfaces\IXElementToNameWithNamedAttributesConvertor.cs" />
     <Compile Include="Models\FileContentsGetter.cs" />
     <Compile Include="Models\NameWithNamedAttributes.cs" />
     <Compile Include="Models\NameWithNamedAttributesPrinter.cs" />
     <Compile Include="Models\NameWithNamedAttributesGetter.cs" />
     <Compile Include="Models\ShapeCommand.cs" />
-    <Compile Include="Models\ShapeCommandsGetter.cs" />
-    <Compile Include="Models\ShapeTransformer.cs" />
+    <Compile Include="Models\ShapeCommandGetter.cs" />
+    <Compile Include="Models\ShapeTransformGetter.cs" />
     <Compile Include="Models\ShapeVerticesGetter.cs" />
+    <Compile Include="Models\VerticiesToNameWithNamedAttributesConverter.cs" />
     <Compile Include="Models\XElementToNameWithNamedAttributesConvertor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\ShapesAndTransformations.cs" />
