More re-jigging

--- a/ShapesAndTransformationsSolution/Infrastructure/Infrastructure.csproj
+++ b/ShapesAndTransformationsSolution/Infrastructure/Infrastructure.csproj
@@ -41,7 +41,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Data\FileContentsGetter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain\Core.csproj">
+      <Project>{060A02C3-27EF-4912-B3FC-CD62EADAD118}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
